[package]
name = "diep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_distr = "*"
lazy_static = "*"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf", "gfx"]
